projects/vb6parse/snapshots/parsers/cst/assignment/assignment_with_nested_property.snap
---
source: projects/vb6parse/src/parsers/cst/assignment.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: value
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: MemberAccessExpression
          children:
            - kind: MemberAccessExpression
              children:
                - kind: Identifier
                  text: obj
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: SubObj
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: SubProperty
        - kind: Newline
          text: "\n"
