projects/vb6parse/snapshots/parsers/cst/assignment/assignment_with_numeric_literal.snap
---
source: projects/vb6parse/src/parsers/cst/assignment.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: pi
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: SingleLiteral
              text: "3.14159"
        - kind: Newline
          text: "\n"
